src/index.css
/**
 * Shadcn theme
 */

:root, .light {
  --background: var(--color-white);                           /* color-bg */
  --foreground: var(--color-zinc-950);                        /* color-text */
  --card: var(--color-white);
  --card-foreground: var(--color-zinc-950);
  --popover: var(--color-white);
  --popover-foreground: var(--color-zinc-950);
  --primary: oklch(0.563 0.194 262.62);                       /* color-bg-primary */
  --primary-foreground: var(--color-white);                   /* color-text-on-color */
  --secondary: var(--color-zinc-100);                         /* color-bg-secondary */
  --secondary-foreground: var(--color-zinc-950);              /* color-text */
  --muted: var(--color-zinc-50);                              /* color-bg-subtle */
  --muted-foreground: var(--color-zinc-500);                  /* color-text-muted */
  --accent: var(--color-blue-100);
  --accent-foreground: var(--color-zinc-950);
  --destructive: var(--color-red-500);                        /* color-bg-error-strong */
  --destructive-foreground: var(--color-white);               /* color-text-on-color */ 
  --border: var(--color-zinc-200);                            /* color-border */
  --input: var(--color-zinc-300);                             /* color-border-input */
  --ring: var(--color-blue-500);                              /* color-border-focusRing */
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --radius: 0.625rem;
  --sidebar: var(--color-zinc-200);
  --sidebar-foreground: var(--color-zinc-950);
  --sidebar-primary: var(--primary);
  --sidebar-primary-foreground: var(--primary-foreground);
  --sidebar-accent: var(--color-blue-200);
  --sidebar-accent-foreground: var(--color-blue-900);
  --sidebar-border: var(--color-zinc-300);
  --sidebar-ring: var(--color-blue-500);
}

.dark {
  --background: var(--color-zinc-950);                       /* color-bg */
  --foreground: var(--color-zinc-50);                        /* color-text */
  --card: var(--color-zinc-950);
  --card-foreground: var(--color-white);
  --popover: var(--color-zinc-950);
  --popover-foreground: var(--color-white);
  --primary: var(--color-blue-500);                          /* color-bg-primary */
  --primary-foreground: var(--color-white);                  /* color-text-on-color */
  --secondary: var(--color-zinc-800);                        /* color-bg-secondary */
  --secondary-foreground: var(--color-zinc-50);              /* color-text */
  --muted: var(--color-zinc-900);                            /* color-bg-subtle */
  --muted-foreground: var(--color-zinc-400);                 /* color-text-muted */
  --accent: var(--color-blue-950);
  --accent-foreground: var(--color-white);
  --destructive: var(--color-red-400);                       /* color-bg-error-strong */
  --destructive-foreground: var(--color-zinc-50);            /* color-text */
  --border: var(--color-zinc-700);                           /* color-border */
  --input: var(--color-zinc-600);                            /* color-border-input */
  --ring: var(--color-blue-500);                             /* color-border-focusRing */
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: var(--color-zinc-950);
  --sidebar-foreground: var(--color-zinc-50);
  --sidebar-primary: var(--primary);
  --sidebar-primary-foreground: var(--primary-foreground);
  --sidebar-accent: var(--color-blue-800);
  --sidebar-accent-foreground: var(--color-zinc-50);
  --sidebar-border: var(--color-zinc-700);
  --sidebar-ring: var(--color-blue-500);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}
 
@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }

  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

/**
 * Custom theme
 */

:root, .light {
  --chrome-50: var(--color-gray-50);
  --chrome-100: var(--color-gray-100);
  --chrome-200: var(--color-gray-200);
  --chrome-300: var(--color-gray-300);
  --chrome-400: var(--color-gray-400);
  --chrome-500: var(--color-gray-500);
  --chrome-600: var(--color-gray-600);
  --chrome-700: var(--color-gray-700);
  --chrome-800: var(--color-gray-800);
  --chrome-900: var(--color-gray-900);
  --chrome-950: var(--color-gray-950);
}

.dark {
  --chrome-50: var(--color-gray-950);
  --chrome-100: var(--color-gray-900);
  --chrome-200: var(--color-gray-800);
  --chrome-300: var(--color-gray-700);
  --chrome-400: var(--color-gray-600);
  --chrome-500: var(--color-gray-500);
  --chrome-600: var(--color-gray-400);
  --chrome-700: var(--color-gray-300);
  --chrome-800: var(--color-gray-200);
  --chrome-900: var(--color-gray-100);
  --chrome-950: var(--color-gray-50);
}

@theme inline {
  --color-chrome-50: var(--chrome-50);
  --color-chrome-100: var(--chrome-100);
  --color-chrome-200: var(--chrome-200);
  --color-chrome-300: var(--chrome-300);
  --color-chrome-400: var(--chrome-400);
  --color-chrome-500: var(--chrome-500);
  --color-chrome-600: var(--chrome-600);
  --color-chrome-700: var(--chrome-700);
  --color-chrome-800: var(--chrome-800);
  --color-chrome-900: var(--chrome-900);
  --color-chrome-950: var(--chrome-950);

  /* text */
  --text-base: 1rem;
  --text-base--line-height: calc(1.5 / 1);
  --text-xs: 0.75rem;
  --text-xs--line-height: calc(1 / 0.75);
  --text-sm: 0.875rem;
  --text-sm--line-height: calc(1.25 / 0.875);
  --text-md: var(--text-base);
  --text-md--line-height: var(--text-base--line-height);
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.875 / 1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(2 / 1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(2.375 / 1.5);

  /* text-heading */
  --text-heading-base: 1rem;
  --text-heading-base--line-height: 1.5rem;
  --text-heading-base--font-weight: 500;
  --text-heading-sm: 0.875rem;
  --text-heading-sm--line-height: 1.25rem;
  --text-heading-sm--font-weight: var(--text-heading-base--font-weight);
  --text-heading-md: var(--text-heading-base);
  --text-heading-md--line-height: var(--text-heading-base--line-height);
  --text-heading-md--font-weight: var(--text-heading-base--font-weight);
  --text-heading-lg: 1.125rem;
  --text-heading-lg--line-height: 1.875rem;
  --text-heading-lg--font-weight: var(--text-heading-base--font-weight);
  --text-heading-xl: 1.25rem;
  --text-heading-xl--line-height: 2rem;
  --text-heading-xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-2xl: 1.5rem;
  --text-heading-2xl--line-height: 2.375rem;
  --text-heading-2xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-3xl: 1.875rem;
  --text-heading-3xl--line-height: 2.625rem;
  --text-heading-3xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-4xl: 2.25rem;
  --text-heading-4xl--line-height: 3.25rem;
  --text-heading-4xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-5xl: 3rem;
  --text-heading-5xl--line-height: 4.5rem;
  --text-heading-5xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-6xl: 3.75rem;
  --text-heading-6xl--line-height: 5.375rem;
  --text-heading-6xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-7xl: 4.5rem;
  --text-heading-7xl--line-height: 6.75rem;
  --text-heading-7xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-8xl: 6rem;
  --text-heading-8xl--line-height: 9rem;
  --text-heading-8xl--font-weight: var(--text-heading-base--font-weight);
  --text-heading-9xl: 8rem;
  --text-heading-9xl--line-height: 12rem;
  --text-heading-9xl--font-weight: var(--text-heading-base--font-weight);
}

@layer base {
  body {
    @apply antialiased;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

